Fixed overlapping problem in form

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -31,6 +31,7 @@ main {
   display: flex;
   flex-direction: column;
   max-width: 500px;
+  position: relative;
 }
 
 .add-task-form-item {
@@ -194,6 +195,18 @@ main {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
+.z-3 {
+  z-index: 3;
+}
+
+.z-4 {
+  z-index: 4;
+}
+
+.z-5 {
+  z-index: 5;
+}
+
 .assignedContactActive {
   display: flex;
   align-items: center;
@@ -206,6 +219,10 @@ main {
 
 .d-none {
   display: none;
+}
+
+.d-hidden {
+  display:
 }
 
 
